--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body id="page-top" class="index">
 
-    <header>  </header>
+    <header>
+      <img src="img/ron3.jpg"></img>
+    </header>
     <content>  </content>
     <footer>  </footer>
 
